[package]
name = "treefy"
version = "0.1.0"
authors = ["floatingbox <floatingbox@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "git ls-files | treefy"
repository = "https://github.com/floatingbox/treefy/"
homepage = "https://github.com/floatingbox/treefy/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
